if(NOT CMQ_BUILD_EXAMPLES)
    return()
endif()

function(cmq_add_example name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PRIVATE cmsgqueue)
    target_compile_options(${name} PRIVATE ${CMQ_WARNING_FLAGS})
endfunction()

cmq_add_example(pubsub)
cmq_add_example(streaming)
cmq_add_example(cluster)

find_package(OpenSSL QUIET)
if(OpenSSL_FOUND)
    target_link_libraries(pubsub PRIVATE OpenSSL::Crypto)
    target_link_libraries(streaming PRIVATE OpenSSL::Crypto)
    target_link_libraries(cluster PRIVATE OpenSSL::Crypto)
endif()
